--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <p class="profile__name">Константин</p>
                     <img class="profile__img" src="./profile-img.png" alt="profile">
                     </div>
-                    <img class="profile__logo--mobile" src="./profile-logo.svg" alt="profile">
+                    <img class="profile__btn--mobile" src="./profile-logo.svg" alt="profile">
                 </button>
             </div>
         </div>    
